--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <style>
+    html { scroll-behavior: smooth; }
+  </style>
   <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Konfia </title>
