--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <style>
+    /* scroll-behavior:smooth es para que se vea el scroll de manera suabe */
     html { scroll-behavior: smooth; }
   </style>
   <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
@@ -16,5 +17,6 @@
   </div>
 
 </body>
+<!-- Script de react -->
 <script type="module" src="./src/main.jsx"></script>
 </html>
